Add support for dart 2

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,6 +1,9 @@
 name: phonecallstate_example
 description: Demonstrates how to use the phonecallstate plugin.
 
+environment:
+  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  
 dependencies:
   flutter:
     sdk: flutter
